[pcore] feat: Fix UnlockDeveloperOptions patch with new referances